<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentWeatherFragment" >

    <TextView
        android:id="@+id/textViewCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="178dp"
        android:text="city"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageViewCurrentWeather"
        android:layout_width="40dp"
        android:layout_height="43dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textViewTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="75dp"
        android:text="@string/tempStr"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewtTempMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTemp"
        android:layout_alignStart="@+id/textViewTemp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/tempMaxStr"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewTempMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewtTempMax"
        android:layout_alignStart="@+id/textViewtTempMax"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/tempMinStr"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTempMin"
        android:layout_alignStart="@+id/textViewTempMin"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/descrStr"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDescription"
        android:layout_alignStart="@+id/textViewDescription"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/humidStr"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewWindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewHumidity"
        android:layout_alignStart="@+id/textViewHumidity"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/windSpd"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewWindDegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewWindSpeed"
        android:layout_alignStart="@+id/textViewWindSpeed"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/windDegStr"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewCloudiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewWindDegree"
        android:layout_alignStart="@+id/textViewWindDegree"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/cloudinessStr"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewTempOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textViewTemp"
        android:layout_marginStart="225dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/textViewTemp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewTempMaxOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTempOutput"
        android:layout_alignStart="@+id/textViewTempOutput"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewTempMinOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTempMaxOutput"
        android:layout_alignStart="@+id/textViewTempMaxOutput"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewDescriptionOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTempMinOutput"
        android:layout_alignStart="@+id/textViewTempMinOutput"
        android:layout_marginStart="-30dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewHumidityOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTempMinOutput"
        android:layout_alignStart="@+id/textViewDescriptionOutput"
        android:layout_marginStart="30dp"
        android:layout_marginTop="45dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewWindSpeedOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewHumidityOutput"
        android:layout_alignStart="@+id/textViewHumidityOutput"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewWindDegreeOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewWindSpeedOutput"
        android:layout_alignStart="@+id/textViewWindSpeedOutput"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewCloudinessOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewWindDegreeOutput"
        android:layout_alignStart="@+id/textViewWindDegreeOutput"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/buttonCheckForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCloudiness"
        android:layout_alignParentStart="true"
        android:layout_marginStart="121dp"
        android:layout_marginTop="48dp"
        android:text="@string/chkforecastButton" />
</RelativeLayout>